# Monkey_Typer

./: CMakeLists.txt  LICENSE.txt  README.md
include/: Button.h  Constants.h  FontManager.h  HighScoreManager.h  LinkedWord.h  MonkeyTyperGame.h  SettingsManager.h  TextAnimation.h  UIManager.h  Word.h  WordDatabaseManager.h
src/: Button.cpp  FontManager.cpp  HighScoreManager.cpp  LinkedWord.cpp  MonkeyTyperGame.cpp  SettingsManager.cpp  TextAnimation.cpp  UIManager.cpp  Word.cpp  WordDatabaseManager.cpp  main.cpp
util/: settings.cfg
